Fixed left-align bug in safari. Added method of contact info in final modal.

--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -259,8 +259,9 @@ td { vertical-align: top; }
 }
 
 #event-info p {
-  margin-bottom: inherit;
-  margin-right: inherit;
+  margin-bottom: 10px;
+  margin-right: 5px;
+  text-align: left;
 }
 
 #modal_fade_overlay {
